img folder added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hello world</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, est?
+    </p>
     <script src="./app.js"></script>
   </body>
 </html>
